samples/_failures_safe/1761423324_68ae3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19cbeea3.c: In function ‘main’:
./samples/SAFE/__tmp_19cbeea3.c:137:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  137 |     struct BoundingBox box
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_19cbeea3.c:137:12: error: expected declaration or statement at end of input
